# Cpp-VideoStreaming-Final-

Client/: CMakeLists.txt  main.cpp  main_old.cpp
Server/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  main.cpp  server
